Compatibility tests fixes
Exclude CompatibilityTest group from default profile.
Use 3.8 to test starting a member with explicit config.
Increase PermGen size in nightly tests profile.