@@ -195,7 +195,9 @@
                         -Dhazelcast.tomcat.shutdown_hazelcast_instance=false
                         ${extraVmArgs}
                     </argLine>
-                    <excludedGroups>com.hazelcast.test.annotation.NightlyTest,com.hazelcast.test.annotation.SlowTest
+                    <excludedGroups>
+                        com.hazelcast.test.annotation.NightlyTest,com.hazelcast.test.annotation.SlowTest,
+                        com.hazelcast.test.annotation.CompatibilityTest
                     </excludedGroups>
                 </configuration>
                 <dependencies>
@@ -527,7 +529,7 @@
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <argLine>
                                 ${extraVmArgs}
-                                -Xms2g -Xmx2g
+                                -Xms2g -Xmx2g -XX:MaxPermSize=1024M
                                 -Dhazelcast.hidensity.check.freememory=false
                                 -Dhazelcast.phone.home.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
